Minor cleanup in KMLCT
Cleanup redundant suppress warnings, other Java 17 improvements etc.
in KafkaMessageListenerContainerTests